test/files/errors/wrong_type_arg_less.scm
; Test: Wrong type argument to < - should return exit code 84
(< #t #f)
